DBにカテゴリ登録

--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -14,7 +14,7 @@
     .header__inner__nav
       .list-left
         .list-left__item-first
-          = link_to 'カテゴリー', '#', class: "category-btn"
+          = link_to 'カテゴリー', categories_path, class: "category-btn"
         .list-left__item-second
           = link_to "ブランド", "#", class:"brand-btn"
       .list-right
