--- a/app/assets/stylesheets/signup/signup-sms.scss
+++ b/app/assets/stylesheets/signup/signup-sms.scss
@@ -178,6 +178,12 @@
               line-height: 1.5;
               font-size: 16px;
             }
+            &__input.invalid { 
+              border: #ea352d 1px solid;
+            }
+            &__input.valid {
+              border: seagreen 1px solid; 
+            }
           }
           p {
             font-size: 14px;
@@ -210,4 +216,10 @@
       }
     }
   }
+}
+#phonenumber-error{
+  color: #ea352d;
+  line-height: 1.5;
+  font-size: 14px;
+  margin-top: 8px;
 }
