--- a/app/views/pays/show.html.haml
+++ b/app/views/pays/show.html.haml
@@ -1,3 +1,5 @@
+= render "pays-header"
+
 .main
   %section.main-pay
     %h2.main-pay__head
@@ -19,3 +21,5 @@
           .pay__regist
             = link_to "#", class: "pay__regist__to" do
               %span 支払い方法について
+
+=render "items/singlefooter"
