--- a/app/views/items/_buy-header.html.haml
+++ b/app/views/items/_buy-header.html.haml
@@ -1,3 +1,3 @@
 %header.main__header
   %h1.maim__header__image
-    = link_to image_tag(src= "logo.png", class: "maim__header__image__logo", size: "140x40"), '#'
+    = link_to image_tag(src= "logo.png", class: "maim__header__image__logo", size: "140x40"), 'root_path'
