--- a/app/views/users/_side.html.haml
+++ b/app/views/users/_side.html.haml
@@ -69,7 +69,7 @@
           発送元、お届け先住所変更
           = icon('fas','angle-right')
       %li
-        = link_to "#", class: "mypage__side__nav__list__item" do
+        = link_to new_pay_path, class: "mypage__side__nav__list__item" do
           支払い方法
           = icon('fas','angle-right')
       %li
