--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -2,7 +2,7 @@
   .header__inner
     .header__inner__main
       .icon
-        = link_to image_tag(src= "logo.png", class: "image", size: "140x40"), '#'
+        = link_to image_tag(src= "logo.png", class: "image", size: "140x40"), root_path
       .searchbox
         %form{"accept-charset" => "UTF-8", :action => "#", :method => "get"}
           %input{name: "utf8", type: "hidden", value: "✓"}/
@@ -19,6 +19,6 @@
           = link_to "ブランド", "#", class:"brand-btn"
       .list-right
         .list-right__item
-          = link_to "ログイン", "#", class: "login-btn"
-          = link_to "新規会員登録", "#", class: "new-member-btn"
+          = link_to "ログイン", new_user_session_path, class: "login-btn"
+          = link_to "新規会員登録", signup_index_path, class: "new-member-btn"
           = link_to "マイページ", mypage_users_path, class: "mypage-btn"
