--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -40,7 +40,7 @@
           %section.buy-content__address
             %h3 配送先
             .buy-content__address__box
-              = link_to edit_item_path, class: "buy-content__address__register" do
+              = link_to  address_users_url, class: "buy-content__address__register" do
                 = icon('fas', 'fa-plus-circle', class: "fal fa-plus-circle")
                 %p.buy-content__address__register__to
                   登録してください
