商品詳細ページ追加　フロント（購入、編集ボタン）

--- a/app/assets/stylesheets/_edit.scss
+++ b/app/assets/stylesheets/_edit.scss
@@ -45,7 +45,6 @@
           background-color: #fff;
           padding: 24px 40px 40px;
           width: 700px;
-          height: 1400px;
           &__name{
           text-align: center;
           font-weight: bold;
@@ -180,6 +179,26 @@
           font-weight: 600;
           border-radius: 7px;
         }
+        .item-edit-btn{
+          font-size: 24px;
+          line-height: 60px;
+          display: block;
+          margin: 65px;
+          background: #3cb371;
+          color: #fff;
+          text-align: center;
+          font-weight: 600;
+          border-radius: 7px;
+        }
+        .item-Description{
+          border-style: solid;
+          border-width: 0;
+          textarea {
+            width: 100%;
+            min-height: 100%;
+            padding: 10px;
+          }
+        }
       }
       .commentBox {
         padding: 24px;
@@ -191,7 +210,7 @@
             width: 100%;
             min-height: 104px;
             padding: 10px;
-            border: 1px solid #333;
+            border: 1px solid #808080;
           }
           .noticeMsg {
             padding: 8px;
