--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -1,3 +1,5 @@
+= render partial:  "header"
+
 %nav.breadCrumbs
   %ul
     %li
@@ -33,12 +35,12 @@
                       = image_tag @image.image, width:"560",name:"BigImage"
                   %tr
                     %td
-                      = link_to "javascript:void(0)", onmouseover:"changeimage( 'https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png' )" do
+                      = link_to "javascript:void(0)", onmouseover:"changeimage(gon.image.image)" do
                         = image_tag @image.image,size: "147x87"
-                      = link_to "javascript:void(0)", onmouseover:"changeimage( 'https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/11/a005.png' )" do
+                      = link_to "javascript:void(0)", onmouseover:"changeimage(gon.image.image)" do
                         = image_tag @image.image,size: "147x87"
                     %td
-                      = link_to "javascript:void(0)", onmouseover:"changeimage( 'https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/12/a006.png' )" do
+                      = link_to "javascript:void(0)", onmouseover:"changeimage(gon.image.image)" do
                         = image_tag @image.image,size: "147x87"
             .item-Box__price
               %span= @item.price
@@ -48,13 +50,12 @@
                 %span
                   送料込み
             .itemDetail= @item.name
-            
             .table
               %table
                 %tbody
                   %tr
                     %th 出品者
-                    %td 
+                    %td
                   %tr
                     %th カテゴリー
                     %td
@@ -92,6 +93,9 @@
                     %i.fa.fa-flag
                     不適切な商品の通報
             %a.item-buy-btn{href:item_path}購入画面に進む
+            %a.item-edit-btn{href:item_path}商品編集
+            %form.item-Description
+              %textarea= @item.description
           .commentBox
             %ul.commentContents
             %form#new_comment.new_comment{"accept-charset":"UTF-8", action:"#", method:"post"}
@@ -119,3 +123,4 @@
         .relatedItems
           = link_to "メンズをもっと見る", "#"
           .productLists
+  = render partial:  "cameraBtn"
