--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -31,11 +31,24 @@
                   ポイントを使用（所持ポイント:P0)
           %section.buy-content__pay__method
             %h3 支払い方法
-            .buy-content__pay__method__box
-              = link_to new_pay_path, class: "buy-content__pay__method__box__register" do
-                = icon('fas', 'fa-plus-circle', class: "fal fa-plus-circle")
-                %p.buy-content__pay__method__box__register__to
-                  登録してください
+            - if @pay.blank?
+              .buy-content__pay__method__box
+                .clearfix
+                = link_to new_pay_path, class: "buy-content__pay__method__box__register" do
+                  = icon('fas', 'fa-plus-circle', class: "fal fa-plus-circle")
+                  %p.buy-content__pay__method__box__register__to
+                    登録してください
+            - else
+              .card__detail__number
+                = "**** **** ****" +@default_card_information.last4
+              - exp_month = @default_card_information.exp_month.to_s
+              - exp_year  = @default_card_information.exp_year.to_s.slice(2,3)
+              .card__detail__time
+                = exp_month + "/" + exp_year
+                = form_tag(delete_pays_path, method: :post, id: 'charge-form',class: "card__detail__submit",name: "inputForm") do
+                  %input{ type: "hidden",name: "card_id", value:""}
+                  %button.card__detail__submit__button 削除する
+            
           
           %section.buy-content__address
             %h3 配送先
