カード登録条件分岐
カード登録したらカード情報が購入確認ページで表示される。

--- a/app/assets/stylesheets/buy.scss
+++ b/app/assets/stylesheets/buy.scss
@@ -175,3 +175,11 @@ h3{
 .fal{
   padding-top:3.4px;
 }
+
+.card__delete{
+  display:block;
+  float:right;
+  &__button{
+    color: #0099e8;
+  }
+}
