カテゴリー機能の非同期追加
#What
カテゴリー選択のセレクトボックスの非同期の追加。
親カテゴリーが選択されると、子カテゴリーのセレクトボックスが出現し、子カテゴリーが選択されると、孫カテゴリーのセレクトボックスが非同期で追加され、submitボタンを押すと、孫カテゴリーのidがitemsテーブルに保存される。

#Why
ユーザーが自分の商品のカテゴリーを選ぶようにするため。検索性が上がる。

--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -30,8 +30,7 @@
           %h3.sell__detail--category カテゴリー
           %span.sell__detail--require 必須
         .sell__detail--selecttop
-          -# f.selectでプルダウンを実装することができる→具体的な記述）f.select:保存したいカラム名(category_id),プルダウンに表示させたい値(@category_parent_array),{オプション}
-          = f.select :category_id, @category_parent_array, {include_blank: '選択してください'}, {}
+          = f.collection_select :category_id, Category.where(ancestry: nil), :id, :name, { prompt: "選択してください" }, { class: "sell__detail--box", id: "parent_category" }
           %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
             %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
         .sell__detail--third
