--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -36,19 +36,13 @@
         .sell__detail--third
           %h3.sell__detail--brand ブランド
           %span.sell__detail--any 任意
-        %input.sell__detail--text{ name: "sell--brand", type: "text", placeholder: "例）シャネル"}/
+        = f.text_field :brand, class: "sell__detail--text", placeholder:"例）シャネル"
+        -# %input.sell__detail--text{ name: "sell--brand", type: "text", placeholder: "例）シャネル"}/
         .sell__detail--forth
           %h3.sell__detail--status 商品の状態
           %span.sell__detail--require 必須
         .sell__detail--selectdown
-          %select{:name => "itemCondition"}
-            %option{"aria-selected" => "true", :label => "選択してください", :selected => "selected", :value => ""} 選択してください
-            %option{"aria-selected" => "false", :label => "新品、未使用", :value => "1"} 新品、未使用
-            %option{"aria-selected" => "false", :label => "未使用に近い", :value => "2"} 未使用に近い
-            %option{"aria-selected" => "false", :label => "目立った傷や汚れなし", :value => "3"} 目立った傷や汚れなし
-            %option{"aria-selected" => "false", :label => "やや傷や汚れあり", :value => "4"} やや傷や汚れあり
-            %option{"aria-selected" => "false", :label => "傷や汚れあり", :value => "5"} 傷や汚れあり
-            %option{"aria-selected" => "false", :label => "全体的に状態が悪い", :value => "6"} 全体的に状態が悪い
+          = f.select :status, [["新品、未使用", "新品、未使用"], ["未使用に近い", "未使用に近い"],  ["目立った傷や汚れなし", "目立った傷や汚れなし"], ["やや傷や汚れあり", "やや傷や汚れあり"],["傷や汚れあり", "傷や汚れあり"],["全体的に状態が悪い", "全体的に状態が悪い"] ],  :prompt => "選択してください"
           %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
             %path{:d => "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
       .sell__delivery
@@ -58,10 +52,7 @@
           %h3.sell__delivery--payment 配送料の負担
           %span.sell__delivery--require 必須
         .sell__delivery--selecttop
-          %select{:name => "shippingPayer"}
-            %option{"aria-selected" => "true", :label => "選択してください", :selected => "selected", :value => ""} 選択してください
-            %option{"aria-selected" => "false", :label => "送料込み(出品者負担)", :value => "2"} 送料込み(出品者負担)
-            %option{"aria-selected" => "false", :label => "着払い(購入者負担)", :value => "1"} 着払い(購入者負担)
+          = f.select :shipping_method, [["送料込み(出品者負担)", "送料込み(出品者負担)"], ["着払い(購入者負担)", "着払い(購入者負担)"]],  :prompt => "選択してください"
           %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
             %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
         .sell__delivery--third
@@ -124,11 +115,7 @@
           %h3.sell__delivery--days 発送までの日数
           %span.sell__delivery--require 必須
         .sell__delivery--selectdown
-          %select{:name => "shippingDuration"}
-            %option{"aria-selected" => "true", :label => "選択してください", :selected => "selected", :value => ""} 選択してください
-            %option{"aria-selected" => "false", :label => "1~2日で発送", :value => "1"} 1~2日で発送
-            %option{"aria-selected" => "false", :label => "2~3日で発送", :value => "2"} 2~3日で発送
-            %option{"aria-selected" => "false", :label => "4~7日で発送", :value => "3"} 4~7日で発送
+          = f.select :shopping_date, [["1~2日で発送", "1~2日で発送"], ["2~3日で発送", "2~3日で発送"], ["4~7日で発送", "4~7日で発送"]],  :prompt => "選択してください"
           %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
             %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
       .sell__price
