--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -241,12 +241,87 @@
       width: 780px;
       margin: 26px auto;
       display: flex;
-      justify-content: space-around;
+      overflow-x: scroll;
       &__item {
         width: 220px;
         &__link {
           background-color: #fff;
           display: inline-block;
+          margin-left: 30px;
+          &__img {
+            width: 220px;
+            height: 150px;
+            overflow: hidden;
+            z-index: auto;
+            text-align: center;
+            &__up {
+              width: 100%;
+              z-index: auto;
+              height: 150px;
+              object-fit: cover;
+            }
+          }
+          &__body {
+            color: #333;
+            padding: 16px;
+            &__name {
+              line-height: 1.5;
+              font-size: 13px;
+              &__show {
+                font-size: 16px;
+                &__list {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  list-style: none;
+                  font-size: 13px;
+                  &__price {
+                    margin: 0;
+                  }
+                }
+                &__tax {
+                  font-size: 10px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.pickupBrand {
+  padding: 80px 0;
+  background-color: #f8f8f8;
+  &__ttl {
+    text-align: center;
+    font-size: 28px;
+    line-height: 1.4;
+  }
+  &__box {
+    margin: 0;
+    padding: 0;
+    &__head {
+      text-align: center;
+      &__color {
+        color: #3CCACE;
+        &__subttl {
+          font-size: 25px;
+        }
+      }
+    }
+    &__items {
+      width: 780px;
+      margin: 26px auto;
+      display: flex;
+      overflow-x: scroll;
+      &__item {
+        width: 220px;
+        &__link {
+          background-color: #fff;
+          display: inline-block;
+          margin-left: 30px;
           &__img {
             width: 220px;
             height: 150px;
