--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -11,10 +11,10 @@
         %br/
         フリマアプリです
       .mainSection__content__btn
-        %a.mainSection__content__btn__appBtn{href: "#"}
-          %img{height: "53.33", src: "#{asset_path('app.svg')}", width: "180"}/
-        %a.mainSection__content__btn__googleBtn{href: "#"}
-          %img{height: "53.33", src: "#{asset_path('goo.svg')}", width: "180"}/
+        = link_to "#", class:"mainSection__content__btn__appBtn" do
+          = image_tag(src= "app.svg", class: "APP", size: "180x53")
+        = link_to "#", class:"mainSection__content__btn__googleBtn" do
+          = image_tag(src= "goo.svg", class: "GOO", size: "180x53")
   .reason
     %h2.reason__subttl
       FURIMAが選ばれる3つの理由
@@ -22,7 +22,7 @@
       %li.reason__lists__list
         .reason__lists__list__photo
           %span.reason__lists__list__photo__num 1
-          %img{height: "306", src: "#{asset_path('pict-reason-01-.jpg')}", width: "306"}/
+          = image_tag(src= "pict-reason-01-.jpg", class: "reason1", size: "306x306")
         %h3.reason__lists__list__txt
           %span.reason__lists__list__txt__head 3分
           ですぐに出品
@@ -31,7 +31,7 @@
       %li.reason__lists__list
         .reason__lists__list__photo
           %span.reason__lists__list__photo__num 2
-          %img{height: "306", src: "#{asset_path('pict-reason-02-.jpg')}", width: "306"}/
+          = image_tag(src= "pict-reason-02-.jpg", class: "reason2", size: "306x306")
         %h3.reason__lists__list__txt
           %span.reason__lists__list__txt__head シンプル
           で使いやすい
@@ -40,7 +40,7 @@
       %li.reason__lists__listEnd
         .reason__lists__listEnd__photo
           %span.reason__lists__listEnd__photo__num 3
-          %img{height: "306", src: "#{asset_path('pict-reason-03-.jpg')}", width: "306"}/
+          = image_tag(src= "pict-reason-03-.jpg", class: "reason3", size: "306x306")
         %h3.reason__lists__listEnd__txt
           手数料
           %span.reason__lists__listEnd__txt__head 業界最安
@@ -56,28 +56,28 @@
         %br/
         ほしかったあの商品に出会えるかもしれません。
       .middleSection__inside__btn
-        %a.middleSection__inside__btn__appBtn{href: "#"}
-          %img{height: "53.33", src: "#{asset_path('app.svg')}", width: "180"}/
-        %a.middleSection__inside__btn__googleBtn{href: "#"}
-          %img{height: "53.33", src: "#{asset_path('goo.svg')}", width: "180"}/
+        = link_to "#", class:"middleSection__inside__btn__appBtn" do
+          = image_tag(src= "app.svg", class: "APP", size: "180x53")
+        = link_to "#", class:"middleSection__inside__btn__googleBtn" do
+          = image_tag(src= "goo.svg", class: "GOO", size: "180x53")
   .characteristic
     %h2.characteristic__subttl FURIMAの特徴
     .characteristic__lists
       .characteristic__lists__list
         .characteristic__lists__list__img
-          %img{height: "337.61", src: "#{asset_path('characteristic-img1.png')}", width: "219.33"}/
+          = image_tag(src= "characteristic-img1.png", class: "chara1", size: "220x338")
         %h3.characteristic__lists__list__ttl 簡単に売り買いできる
         %p.characteristic__lists__list__describe
           スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
       .characteristic__lists__list
         .characteristic__lists__list__img
-          %img{height: "337.61", src: "#{asset_path('characteristic-img2.png')}", width: "219.33"}/
+          = image_tag(src= "characteristic-img2.png", class: "chara2", size: "220x338")
         %h3.characteristic__lists__list__ttl 売上金は即日振込みに対応
         %p.characteristic__lists__list__describe
           午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします!
       .characteristic__lists__list
         .characteristic__lists__list__img
-          %img{height: "337.61", src: "#{asset_path('characteristic-img3.png')}", width: "219.33"}/
+          = image_tag(src= "characteristic-img3.png", class: "chara3", size: "220x338")
         %h3.characteristic__lists__list__ttl 様々な支払いに対応
         %p.characteristic__lists__list__describe
           お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
@@ -85,96 +85,48 @@
     %h2.pickupCategory__ttl ピックアップカテゴリー
     .pickupCategory__box
       .pickupCategory__box__head
-        %a.pickupCategory__box__head__color{href: "#"}
-          %h3.pickupCategory__box__head__color__subttl 新規投稿商品
+        = link_to "#", class:"pickupCategory__box__head__color" do
+          %h3.pickupCategory__box__head__color__subttl 新規投稿商品 
       .pickupCategory__box__items
         .pickupCategory__box__items__item
-          %a.pickupCategory__box__items__item__link{href: "/products/3"}
+        - @image.each do |item|
+          = link_to show_item_path(id: item.id) ,class: "pickupCategory__box__items__item__link" do
             .pickupCategory__box__items__item__link__img
-              %img.pickupCategory__box__items__item__link__img__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png"}/
+              = image_tag item.image, class: "pickupCategory__box__items__item__link__img__up"
             .pickupCategory__box__items__item__link__body
-              %h3.pickupCategory__box__items__item__link__body__name product3
+              %h3.pickupCategory__box__items__item__link__body__name
+                = item.item.name
               .pickupCategory__box__items__item__link__body__name__show
                 %ul.pickupCategory__box__items__item__link__body__name__show__list
-                  %li.pickupCategory__box__items__item__link__body__name__show__list__price 30000円
+                  = item.item.price
+                  円
                   %li
                     %i.fa.fa-star.likeIcon
                     0
                 %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
-        .pickupCategory__box__items__item
-          %a.pickupCategory__box__items__item__link{href: "/products/2"}
-            .pickupCategory__box__items__item__link__img
-              %img.pickupCategory__box__items__item__link__img__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png"}/
-            .pickupCategory__box__items__item__link__body
-              %h3.pickupCategory__box__items__item__link__body__name product2
-              .pickupCategory__box__items__item__link__body__name__show
-                %ul.pickupCategory__box__items__item__link__body__name__show__list
-                  %li.pickupCategory__box__items__item__link__body__name__show__list__price 20000円
+    .pickupBrand
+      %h2.pickupBrand__ttl ピックアップブランド
+      .pickupBrand__box
+      .pickupBrand__box__head
+        = link_to "#", class:"pickupBrand__box__head__color" do
+          %h3.pickupBrand__box__head__color__subttl 新規投稿商品 
+      .pickupBrand__box__items
+        .pickupBrand__box__items__item
+        - @image.each do |item|
+          = link_to show_item_path(id: item.id) ,class: "pickupBrand__box__items__item__link" do
+            .pickupBrand__box__items__item__link__img
+              = image_tag item.image, class: "pickupBrand__box__items__item__link__img__up"
+            .pickupBrand__box__items__item__link__body
+              %h3.pickupBrand__box__items__item__link__body__name
+                = item.item.name
+              .pickupBrand__box__items__item__link__body__name__show
+                %ul.pickupBrand__box__items__item__link__body__name__show__list
+                  = item.item.price
+                  円
                   %li
                     %i.fa.fa-star.likeIcon
                     0
-                %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
-        .pickupCategory__box__items__item
-          %a.pickupCategory__box__items__item__link{href: "/products/1"}
-            .pickupCategory__box__items__item__link__img
-              %img.pickupCategory__box__items__item__link__img__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/7/a001.png"}/
-            .pickupCategory__box__items__item__link__body
-              %h3.pickupCategory__box__items__item__link__body__name product1
-              .pickupCategory__box__items__item__link__body__name__show
-                %ul.pickupCategory__box__items__item__link__body__name__show__list
-                  %li.pickupCategory__box__items__item__link__body__name__show__list__price 10000円
-                  %li
-                    %i.fa.fa-star.likeIcon
-                    0
-                %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
-    .pickupCategory
-    %h2.pickupCategory__ttl ピックアップブランド
-    .pickupCategory__box
-      .pickupCategory__box__head
-        %a.pickupCategory__box__head__color{href: "#"}
-          %h3.pickupCategory__box__head__color__subttl アーカイバ
-      .pickupCategory__box__items
-        .pickupCategory__box__items__item
-          %a.pickupCategory__box__items__item__link{href: "/products/3"}
-            .pickupCategory__box__items__item__link__img
-              %img.pickupCategory__box__items__item__link__img__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png"}/
-            .pickupCategory__box__items__item__link__body
-              %h3.pickupCategory__box__items__item__link__body__name product3
-              .pickupCategory__box__items__item__link__body__name__show
-                %ul.pickupCategory__box__items__item__link__body__name__show__list
-                  %li.pickupCategory__box__items__item__link__body__name__show__list__price 30000円
-                  %li
-                    %i.fa.fa-star.likeIcon
-                    0
-                %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
-        .pickupCategory__box__items__item
-          %a.pickupCategory__box__items__item__link{href: "/products/2"}
-            .pickupCategory__box__items__item__link__img
-              %img.pickupCategory__box__items__item__link__img__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png"}/
-            .pickupCategory__box__items__item__link__body
-              %h3.pickupCategory__box__items__item__link__body__name product2
-              .pickupCategory__box__items__item__link__body__name__show
-                %ul.pickupCategory__box__items__item__link__body__name__show__list
-                  %li.pickupCategory__box__items__item__link__body__name__show__list__price 20000円
-                  %li
-                    %i.fa.fa-star.likeIcon
-                    0
-                %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
-        .pickupCategory__box__items__item
-          %a.pickupCategory__box__items__item__link{href: "/products/1"}
-            .pickupCategory__box__items__item__link__img
-              %img.pickupCategory__box__items__item__link__img__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/7/a001.png"}/
-            .pickupCategory__box__items__item__link__body
-              %h3.pickupCategory__box__items__item__link__body__name product1
-              .pickupCategory__box__items__item__link__body__name__show
-                %ul.pickupCategory__box__items__item__link__body__name__show__list
-                  %li.pickupCategory__box__items__item__link__body__name__show__list__price 10000円
-                  %li
-                    %i.fa.fa-star.likeIcon
-                    0
-                %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
+                %p.pickupBrand__box__items__item__link__body__name__show__tax (税込)
   = render partial:  "cameraBtn"
-
 =render "banner"
-
 =render "footer"
