--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -90,7 +90,7 @@
       .pickupCategory__box__items
         .pickupCategory__box__items__item
         - @image.each do |item|
-          = link_to show_item_path(id: item.id) ,class: "pickupCategory__box__items__item__link" do
+          = link_to edit_item_path(id: item.id) ,class: "pickupCategory__box__items__item__link" do
             .pickupCategory__box__items__item__link__img
               = image_tag item.image, class: "pickupCategory__box__items__item__link__img__up"
             .pickupCategory__box__items__item__link__body
@@ -113,7 +113,7 @@
       .pickupBrand__box__items
         .pickupBrand__box__items__item
         - @image.each do |item|
-          = link_to show_item_path(id: item.id) ,class: "pickupBrand__box__items__item__link" do
+          = link_to edit_item_path(id: item.id) ,class: "pickupBrand__box__items__item__link" do
             .pickupBrand__box__items__item__link__img
               = image_tag item.image, class: "pickupBrand__box__items__item__link__img__up"
             .pickupBrand__box__items__item__link__body
