--- a/app/views/users/address.html.haml
+++ b/app/views/users/address.html.haml
@@ -4,33 +4,46 @@
   %section.address__box
     %h2.address__box__input
       発送元・お届け先住所入力
-    = form_for @address, url: register_users_path, method: :get, html:{class: 'address__box__form', id: "address-form"} do |f|
+    = form_for @user, url: register_users_path, method: :post, html:{class: 'address__box__form', id: "address-form"} do |f|
       .address__box__form__content
         .address__box__form__content__list
-          %label.address__box__form__content__list__label 郵便番号
+          %label.address__box__form__content__list__label お名前 
           %span.address__box__form__content__list__require 必須
-          = f.text_field :postal_code, id: "postal_code" ,placeholder: "例）123-4567",class: "address__box__form__content__list__input"
-          #postal_code_error
+          = f.text_field :family_name, class: "address__box__form__content__list__input", placeholder:"例）山田", id: "family_name"
+          = f.text_field :last_name, class: "address__box__form__content__list__input", placeholder:"例）彩", id: "last_name"
+          #name_error
         .address__box__form__content__list
-          %label.address__box__form__content__list__label 都道府県
+          %label.address__box__form__content__list__label お名前かな 
           %span.address__box__form__content__list__require 必須
-          .address__box__form__content__list__prefecture 
-            %i.fas.fa-chevron-down.fa-lg.address__box__form__content__list__prefecture__icon
-            = f.collection_select :prefecture_id,Prefecture.all,:id,:name,{prompt: "--"},{class: "address__box__form__content__list__prefecture__pulldown"}
-            #prefecture_id_error
-        .address__box__form__content__list
-          %label.address__box__form__content__list__label 市区町村
-          %span.address__box__form__content__list__require 必須
-          = f.text_field :municipalitie, id: "municipalitie", placeholder: "例)横浜市緑区", class: "address__box__form__content__list__input" 
-          #municipalitie_error
-        .address__box__form__content__list
-          %label.address__box__form__content__list__label 番地
-          %span.address__box__form__content__list__require 必須
-          = f.text_field :street, id: "street", placeholder: "例)青山1-1-1", class: "address__box__form__content__list__input"
-          #street_error
-        .address__box__form__content__list
-          %label.address__box__form__content__list__label 建物名
-          %span.address__box__form__content__list__arbitrary 任意
-          = f.text_field :building, id: "building", placeholder: "例)柳ビル103", class: "address__box__form__content__list__input"
+          = f.text_field :frigana_family_name, class: "address__box__form__content__list__input", placeholder:"例）ヤマダ", id: "frigana_family_name"
+          = f.text_field :frigana_last_name, class: "address__box__form__content__list__input", placeholder:"例）アヤ", id: "frigana_last_name"
+          #frigana_name_error
+          = f.fields_for :address, @address do |address_form|
+            .address__box__form__content__list
+              %label.address__box__form__content__list__label 郵便番号
+              %span.address__box__form__content__list__require 必須
+              = address_form.text_field :postal_code, id: "postal_code" ,placeholder: "例）123-4567",class: "address__box__form__content__list__input"
+              #postal_code_error
+            .address__box__form__content__list
+              %label.address__box__form__content__list__label 都道府県
+              %span.address__box__form__content__list__require 必須
+              .address__box__form__content__list__prefecture 
+                %i.fas.fa-chevron-down.fa-lg.address__box__form__content__list__prefecture__icon
+                = address_form.collection_select :prefecture_id,Prefecture.all,:id,:name,{prompt: "--"},{class: "address__box__form__content__list__prefecture__pulldown"}
+                #prefecture_id_error
+            .address__box__form__content__list
+              %label.address__box__form__content__list__label 市区町村
+              %span.address__box__form__content__list__require 必須
+              = address_form.text_field :municipalitie, id: "municipalitie", placeholder: "例)横浜市緑区", class: "address__box__form__content__list__input" 
+              #municipalitie_error
+            .address__box__form__content__list
+              %label.address__box__form__content__list__label 番地
+              %span.address__box__form__content__list__require 必須
+              = address_form.text_field :street, id: "street", placeholder: "例)青山1-1-1", class: "address__box__form__content__list__input"
+              #street_error
+            .address__box__form__content__list
+              %label.address__box__form__content__list__label 建物名
+              %span.address__box__form__content__list__arbitrary 任意
+              = address_form.text_field :building, id: "building", placeholder: "例)柳ビル103", class: "address__box__form__content__list__input"
 
           = f.submit :"登録する", class: "btn__form"
