--- a/app/assets/stylesheets/purchase.scss
+++ b/app/assets/stylesheets/purchase.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the purchase controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.main-section__parchase{
+  border-top:1px solid #f5f5f5;
+  padding: 32px 16px;
+  &__box{
+    margin: 0 auto;
+    text-align: center;
+    max-width:343px;
+  }
+}
