--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -47,17 +47,36 @@
                   %button.card__delete__button 削除する
               - exp_month = @default_card_information.exp_month.to_s
               - exp_year  = @default_card_information.exp_year.to_s.slice(2,3)
-              .card__detail__time
-                = exp_month + "/" + exp_year
+              .card__expiration
+                .card__expiration__date 
+                  有効期限
+                  = exp_month + "/" + exp_year
             
           
           %section.buy-content__address
             %h3 配送先
-            .buy-content__address__box
-              = link_to  address_users_url, class: "buy-content__address__register" do
-                = icon('fas', 'fa-plus-circle', class: "fal fa-plus-circle")
-                %p.buy-content__address__register__to
-                  登録してください
+            - if @address.blank?
+              .buy-content__address__box
+                = link_to  address_users_url, class: "buy-content__address__register" do
+                  = icon('fas', 'fa-plus-circle', class: "fal fa-plus-circle")
+                  %p.buy-content__address__register__to
+                    登録してください
+            - else
+              .address__register
+                = form_tag(delete_pays_path, method: :post, id: 'charge-form',class: "card__delete",name: "inputForm") do
+                  %input{ type: "hidden",name: "card_id", value:""}
+                  %button.card__delete__button 削除する
+                .address__register__after
+                  〒
+                  = current_user.address.postal_code
+                  %br
+                  = current_user.address.prefecture.name
+                  = current_user.address.municipalitie
+                  = current_user.address.street
+                  = current_user.address.building
+                  .address__register__after__name
+                    = current_user.family_name
+                    = current_user.last_name
 
         = form_tag(controller: :purchase, action: :index, method: :post) do
           %section.buy-content__btn
