--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -59,7 +59,7 @@
                 %tbody
                   %tr
                     %th 出品者
-                    %td= link_to(@user.nickname,"items/#{@user.id}")
+                    %td= link_to @user.nickname,item_path(@user)
                   %tr
                     %th カテゴリー
                     %td
@@ -94,10 +94,10 @@
                   %i.fa.fa-flag 不適切な商品の通報
                   -# itemの外部キーとcurrent_user.idが同じであれば出品者なので編集ボタンが表示される。参考カリキュラムhttps://master.tech-camp.in/curriculums/178
                 - if user_signed_in? && current_user.id == @item.user_id 
-                  = link_to("編集","items/#{@item.id}/edit",class:"item-edit-btn")
+                  = link_to("編集",edit_path(@item.id),class:"item-edit-btn")
                   -# 非出品者には購入ボタンが表示される。
                 - else
-                  = link_to("購入","items/#{@item.id}/buy",class:"item-buy-btn")
+                  = link_to("購入",item_path(@item.id),class:"item-buy-btn")
             %form.item-Description
               %textarea= @item.description
           .commentBox
