消去ボタンの追加

--- a/app/assets/stylesheets/_edit.scss
+++ b/app/assets/stylesheets/_edit.scss
@@ -171,6 +171,17 @@
           font-weight: 600;
           border-radius: 7px;
         }
+        .item-delete-btn{
+          font-size: 24px;
+          line-height: 60px;
+          display: block;
+          margin: 65px;
+          background: #808080;
+          color: #fff;
+          text-align: center;
+          font-weight: 600;
+          border-radius: 7px;
+        }
         .item-buy-btn{
           font-size: 24px;
           line-height: 60px;
