--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,5 +1,5 @@
 =render "header"
-= link_to "商品詳細ページ","/items/show/edit"
+= link_to "商品詳細ページ","/items/show"
 .main
   .mainSection
     .mainSection__content
