--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -86,31 +86,33 @@
                                             margin: 8px 0px 0px;
                                             line-height: 1.5;
                                           }
-                                        &--upload{
-                                          margin: 16px auto 0;
-                                          position: relative;
-                                          min-height: 162px;
-                                          background: #f5f5f5;
-                                          border: 1px dashed #ccc;
-                                          font-size: 0;
-                                          text-align: center;
-                                          transition: box-shadow ease-out .3s, -webkit-box-shadow ease-out .3s;
-                                          cursor: pointer;
-                                          }
-                                        .visible-pc{
-                                          position: absolute;
-                                          top: 50%;
-                                          left: 16px;
-                                          right: 16px;
-                                          text-align: center;
-                                          font-size: 14px;
-                                          line-height: 1.5;
-                                          -webkit-transform: translate(0, -50%);
-                                          transform: translate(0, -50%);
-                                          pointer-events: none;
-                                          white-space: pre-wrap;
-                                          word-wrap: break-word;
-                                          }
+                                        // &--third{
+                                        //   display: flex;
+                                        //         .sell__image--class{
+                                        //           // display: inline-block;
+                                        //           background: #f5f5f5;
+                                        //           color:black;
+                                        //           cursor: pointer;
+                                        //           padding: 15px 30px;
+                                        //           margin: 0 10px 0 0;
+                                        //           display: inline-block;
+                                        //           margin: 16px auto 0;
+                                        //           min-height: 162px;
+                                        //           width: 100%;
+                                        //           border: 1px dashed #ccc;
+                                        //           padding: 45px 0 0 0;
+                                        //           text-align: center;
+                                        //           // transition: box-shadow ease-out .3s, -webkit-box-shadow ease-out .3s;
+                                        //           cursor: pointer;
+                                        //           font-size: 12px;
+                                        //           line-height: 1.4em;
+                                        //                     .fas{
+                                        //                         display: block;
+                                        //                         font-size: 22px;
+                                        //                         margin-bottom: 12px;
+                                        //                     }
+                                        //           }
+                                        //   }
                                         }
 // ーーーここから上は「出品画像」フォームーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー
 // ーーーここから下は「出品名」フォームーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー
