商品詳細ページコメント機能

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -73,16 +73,16 @@
                     %td
                   %tr
                     %th 商品のサイズ
-                    %td= @item.size
+                    %td= @item.sizerail
                   %tr
                     %th 商品の状態
                     %td= @item.status
                   %tr
                     %th 配送料の負担
-                    %td= @item.shipping_charges
+                    %td
                   %tr
                     %th 発送元の地域
-                    %td= @item.region
+                    %td
                   %tr
                     %th 発送日の目安
                     %td= @item.shopping_date
