出品商品の購入
出品商品の購入を可能にしました。
クレカとアドレスがないと購入できないようにしました。

--- a/app/views/users/address.html.haml
+++ b/app/views/users/address.html.haml
@@ -47,3 +47,5 @@
               = address_form.text_field :building, id: "building", placeholder: "例)柳ビル103", class: "address__box__form__content__list__input"
 
           = f.submit :"登録する", class: "btn__form"
+
+=render "items/singlefooter" 
