--- a/app/views/items/_cameraBtn.html.haml
+++ b/app/views/items/_cameraBtn.html.haml
@@ -1,3 +1,3 @@
-%a.cameraBtn{href: "#"}
+%a.cameraBtn{href: "/items/new"}
   %span.cameraBtn__txt 出品する
   %img.cameraBtn__icon{src: "#{asset_path('camera__icon.svg')}"}/
