--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -7,13 +7,16 @@
       .main-section__item__buy
         .main-section__item__buy__box
           %h3.main-section__item__buy__image
-            = image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png",size: "80x80"
+            = image_tag @item.images[0].image.url
           .main-section__item__detail
             %p.main-section__item__detail__name 
-              商品入るよ
+              = @item.name
             %p.main-section__item__detail__price
-              %span ¥200
-              %span.main-section__item__detail__tax (税込)送料なし
+              %span 
+                = @item.price
+                円
+              %span.main-section__item__detail__tax 
+                = @item.shipping_method
     %section.buy-section__price
       .buy-section__price__content
         .buy-section__price__content__form
@@ -22,7 +25,9 @@
               .buy-section__price__content__form__list__label 
                 支払い金額
               .buy-section__price__content__form__list__money
-                %span ￥200
+                %span
+                  ¥ 
+                  = @item.price
           %ul.buy-section__point
             %li.buy-section__point__check
               .buy-section__point__check__box
@@ -30,6 +35,7 @@
                 %label.buy-section__point__check__box__label
                   ポイントを使用（所持ポイント:P0)
           
+          //クレカ登録条件分岐
           %section.buy-content__pay__method
             %h3 支払い方法
             - if @pay.blank?
@@ -52,7 +58,7 @@
                   有効期限
                   = exp_month + "/" + exp_year
             
-          
+          //住所登録条件分岐
           %section.buy-content__address
             %h3 配送先
             - if @address.blank?
@@ -78,8 +84,14 @@
                     = current_user.family_name
                     = current_user.last_name
 
-        = form_tag(controller: :purchase, action: :index, method: :post) do
+        //クレカとアドレスがない時は購入不可
+        - if @pay && @address.blank?
           %section.buy-content__btn
-            %button.buy-content__btn__buy 購入する
+            %button.buy-content__btn__nobuy 購入する
+        -else
+          = link_to pay_purchase_index_path(id:@item.id) do
+            %section.buy-content__btn
+              %button.buy-content__btn__buy 購入する
+        
 
 =render "singlefooter"      
