--- a/app/views/purchase/buy.html.haml
+++ b/app/views/purchase/buy.html.haml
@@ -1,4 +1,4 @@
-= render partial:  "buy-header"
+= render "items/buy-header"
   
 .main
   %section.main-section
@@ -94,4 +94,4 @@
               %button.buy-content__btn__buy 購入する
         
 
-=render "singlefooter"      
+=render "items/singlefooter"      
