コードレビュー後修正２
image_tagへの変更
destroyでのcard削除

--- a/app/assets/stylesheets/ress.scss
+++ b/app/assets/stylesheets/ress.scss
@@ -169,7 +169,7 @@
   [type="submit"],
   [role="button"] {
     cursor: pointer;
-    //color: inherit;
+    color: inherit;
   }
   
   /* Remove inner padding and border in Firefox 4+ */
