--- a/app/assets/stylesheets/pays/new.scss
+++ b/app/assets/stylesheets/pays/new.scss
@@ -60,13 +60,36 @@
       &__card{
         margin:8px 0 0;
         font-size:0;
+        &__list{
+          display: inline-block;
+          vertical-align: middle;
+          &__visa{
+            width: 49px;
+            height: 20px;
+            margin: 0;
+          }
+          &__master,
+          &__jcb,
+          &__saison{
+            width: 34px;
+            height: 20px;
+            margin: 0 0 0 8px;
+          }
+          &__amex {
+            width: 21px;
+            height: 20px;
+            margin: 0 0 0 8px;
+          }
+          &__dinersclub,
+          &__discover {
+            width: 32px;
+            height: 20px;
+            margin: 0 0 0 8px;
+          }
+        }
       }
     }
   }
-}
-
-img{
-  margin:0 0 0 8px;
 }
 
 .form-label{
