--- a/app/views/pays/new.html.haml
+++ b/app/views/pays/new.html.haml
@@ -11,13 +11,19 @@
         = text_field_tag "number", "", class: "main-pay__form__number", placeholder: "半角数字のみ", maxlength: "16",type: "text", id: "card_number",name: "card_number"
         %ul.main-pay__form__card
           %li.main-pay__form__card__list
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?3678719749", :width => "49"}/
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/master-card.svg?3678719749", :width => "34"}/
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/saison-card.svg?3678719749", :width => "30"}/
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/jcb.svg?3678719749", :width => "32"}/
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?3678719749", :width => "21"}/
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?3678719749", :width => "32"}/
-            %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?3678719749", :width => "32"}/
+            = image_tag "visa.svg", class: "main-pay__form__card__list__visa"
+          %li.main-pay__form__card__list
+            = image_tag "mastercard.svg", class: "main-pay__form__card__list__master"
+          %li.main-pay__form__card__list
+            = image_tag "saisoncard.svg", class: "main-pay__form__card__list__saison"
+          %li.main-pay__form__card__list
+            = image_tag "jcb.svg", class: "main-pay__form__card__list__jcb"
+          %li.main-pay__form__card__list
+            = image_tag "american.svg", class: "main-pay__form__card__list__amex"
+          %li.main-pay__form__card__list
+            = image_tag "dinersclub.svg", class: "main-pay__form__card__list__dinersclub"
+          %li.main-pay__form__card__list
+            = image_tag "discover.svg", class: "main-pay__form__card__list__discover"
           #card_number_error
         .pay__form
           %label.form-label 有効期限
