パンくず表示
gretel install
item.name表示 showへ
mypageに表示

--- a/app/views/users/mypage.html.haml
+++ b/app/views/users/mypage.html.haml
@@ -1,5 +1,6 @@
 = render "items/header"
-
+- breadcrumb :mypage
+= render "layouts/breadcrumbs"
 .mypage.clearfix
   .mypage__main
     %section.mypage__main__user-icon
